--- a/index.html
+++ b/index.html
@@ -1,12 +1,114 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Burak Emre Tetik - Profile</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem 2rem;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        section {
+            max-width: 900px;
+            margin: 2rem auto;
+            padding: 1rem 2rem;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #555;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 0.5rem;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 0.5rem 0;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Portfolio</h1>
-    <p>Portfolio content</p>
+    <header>
+        <h1>Burak Emre Tetik</h1>
+        <p>Student | Data Analyst | AI Enthusiast</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>
+            Hi, I am Burak Emre Tetik, a Statistics student at Ege University with a passion for data analysis, 
+            artificial intelligence, and solving real-world problems using AI technologies. I have experience 
+            in data collection, data visualization, and automation. I am also the founder of Tinyevler.com, 
+            which I sold to focus on artificial intelligence and my academic journey.
+        </p>
+    </section>
+
+    <section>
+        <h2>Education</h2>
+        <ul>
+            <li><strong>Ege University</strong> - Department of Statistics</li>
+            <li><strong>Previously:</strong> Department of Medicine at Ege University</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <strong>Tinyevler.com</strong> - Built a listing platform for tiny houses, working with manufacturers and owners.
+            </li>
+            <li>
+                <strong>Automated Government Incentive Applications</strong> - Streamlined applications while working in financial consulting.
+            </li>
+            <li>
+                <strong>LLM Projects:</strong> Built a local LLM application to automate linear regression and worked on Retrieval-Augmented Generation (RAG).
+            </li>
+            <li>
+                <strong>Data Analysis at Jantsa:</strong> Categorized employee feedback for better evaluation.
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Data Analysis & Visualization (Python)</li>
+            <li>Process Automation</li>
+            <li>Natural Language Processing (NLP)</li>
+            <li>AI Development with LLMs</li>
+            <li>Web Development</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>
+            Connect with me on <a href="https://www.linkedin.com/in/burakemretetik" target="_blank">LinkedIn</a> or email me at <a href="mailto:your-email@example.com">your-email@example.com</a>.
+        </p>
+    </section>
 </body>
 </html>
