--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section>
         <h2>Contact</h2>
         <p>
-            Connect with me on <a href="https://www.linkedin.com/in/burakemretetik" target="_blank">LinkedIn</a> or email me at <a href="mailto:your-email@example.com">your-email@example.com</a>.
+            Connect with me on <a href="https://www.linkedin.com/in/burakemretetik" target="_blank">LinkedIn</a> or email me at <a href="mailto:burakemretetik@gmail.com">your-email@example.com</a>.
         </p>
     </section>
 </body>
