--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <li>Data Analysis & Visualization (Python)</li>
             <li>Process Automation</li>
             <li>Natural Language Processing (NLP)</li>
-            <li>AI Development with LLMs</li>
-            <li>Web Development</li>
+            <li>Large Language Models</li>
+            <li>Statistics</li>
         </ul>
     </section>
 
